--- a/package.json
+++ b/package.json
@@ -16,10 +16,21 @@
     "author": "Muru",
     "license": "MIT",
     "dependencies": {
+        "@ant-design/charts": "^1.4.2",
+        "@ant-design/icons": "^5.0.1",
+        "@ant-design/pro-layout": "^7.8.3",
+        "antd": "^5.2.3",
+        "classnames": "^2.3.2",
+        "lodash": "^4.17.21",
+        "modal-g": "^0.1.41",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-grid-layout": "^1.3.4",
+        "react-icons": "^4.7.1",
+        "react-keyevent": "^1.1.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
         "clean-webpack-plugin": "^4.0.0",
